err-instr-parser-3ac.txt

parser.c: In function ‘_for’:
parser.c:770:34: error: ‘list’ undeclared (first use in this function)
     string LastVar = ReadNameVar(list);
                                  ^
parser.c: In function ‘_if’:
parser.c:925:34: error: ‘list’ undeclared (first use in this function)
     string LastVar = ReadNameVar(list); // funkce na cteni nazvu posledni instrukce
                                  ^
